few new updates on pdf reader llm ollama , etc etc
